tautulli/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  labels:
    app: tautulli
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.sonarr: "semver:~2"
spec:
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: tautulli/tautulli:nightly
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8181
          protocol: TCP
        volumeMounts:
        - name: tautulli-config
          mountPath: "/config"
      volumes:
      - name: tautulli-config
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-tautulli
