tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 8181
    protocol: TCP
    name: http
  selector:
    app: tautulli
